# Anacleto

./: .gitignore  .gitignore.in  Common.mk
conf/linux/4.4.0/: red_pitaya.def
projects/: configure.ac
projects/rfx_dac/: Makefile.am
projects/rfx_dac/linux/src/: Kbuild.in  Makefile.am  nioadc_dma_auto.c  rpadc_dma_auto.c  rpadc_dma_auto_test.c  zynq_device.c.template  zynq_device_dma.c.template
projects/rfx_dac/prj/red_pitaya/: rfx_recorder_0.1.tcl
projects/rfx_dac/src/: frequency_counter.v  merge_signals.vhdl  resampler_tb.vhdl  vi_rms.v
projects/rfx_nioadc/: Makefile.am  red_pitaya.xdc
projects/rfx_nioadc/linux/src/: Kbuild.in  Makefile.am  get_device_tree_info.py  nioadc_dma_auto.h  rpadc_dma.c  rpadc_dma.h  rpadc_dma_test.c  rpadc_fifo_auto.c  rpadc_fifo_auto.h  rpadc_fifo_test.c  zynq_device.c  zynq_device.c.template  zynq_device.h.template  zynq_device_dma.c.template.ok
projects/rfx_nioadc/prj/red_pitaya/: rfx_nioadc_dma_0.1.tcl
projects/rfx_nioadc/prj/red_pitaya/rfx_nioadc_dma_0.1.srcs/sources_1/bd/red_pitaya_ps_1/: red_pitaya_ps_1.bd  red_pitaya_ps_1.bd_2017.4.tcl
projects/rfx_nioadc/prj/red_pitaya/rfx_nioadc_dma_0.1.srcs/sources_1/bd/red_pitaya_ps_1/hdl/: red_pitaya_ps_1_wrapper.vhd
projects/rfx_nioadc/src/: frequency_counter.v  resampler.vhdl  timing_highway.vhdl  trarec_dma.vhdl
projects/rfx_pwmgen/: Makefile.am
projects/rfx_pwmgen/prj/red_pitaya/: rfx_pwmgen_1.0.tcl
projects/rfx_pwmgen/prj/red_pitaya/rfx_pwmgen_1.0.srcs/sources_1/bd/red_pitaya/: red_pitaya.bd  red_pitaya.bd_2018.1.tcl
projects/rfx_recorder/: Makefile.am  red_pitaya.xdc
projects/rfx_recorder/linux/src/: Kbuild.in  Makefile.am  get_device_tree_info.py  rfx_recorder.c  rfx_recorder.h  zynq_device.c.template  zynq_device.h  zynq_device.h.template  zynq_device_dma.c.template
projects/rfx_recorder/prj/red_pitaya/: rfx_recorder_0.1.tcl
projects/rfx_recorder/prj/red_pitaya/rfx_recorder_0.1.srcs/sources_1/bd/red_pitaya_ps_1/: red_pitaya_ps_1.bd  red_pitaya_ps_1.bd_2017.4.tcl
projects/rfx_recorder/prj/red_pitaya/rfx_recorder_0.1.srcs/sources_1/bd/red_pitaya_ps_1/hdl/: red_pitaya_ps_1_wrapper.vhd
projects/rfx_recorder/prj/red_pitaya/rfx_recorder_0.1.srcs/sources_1/imports/src/: integrator.vhdl  recorder.vhdl  splitter.vhdl
projects/rfx_recorder/src/: recorder.vhdl  splitter.vhdl
projects/rfx_stream/: Makefile.am  red_pitaya_10.xdc  red_pitaya_dcouplers.xdc  red_pitaya_ps_1.bd_2017.4.tcl  usb-patch.txt
projects/rfx_stream/linux/src/: Kbuild  Makefile.am  rfx_stream.c  zynq_device.c.template
projects/rfx_stream/prj/red_pitaya/: rfx_stream_0.1.tcl  rfx_stream_10.tcl  rfx_stream_dcp_0.1.tcl
projects/rfx_stream/prj/red_pitaya/patches/: system-top.patch
projects/rfx_stream/prj/red_pitaya/rfx_stream_0.1.srcs/sources_1/bd/red_pitaya_ps_1/: red_pitaya_ps_1.bd  red_pitaya_ps_1.bd_2017.4.tcl
projects/rfx_stream/prj/red_pitaya/rfx_stream_0.1.srcs/sources_1/bd/red_pitaya_ps_1/hdl/: red_pitaya_ps_1_wrapper.v
projects/rfx_stream/prj/red_pitaya/rfx_stream_10.srcs/constrs_1/imports/rfx_stream/: red_pitaya_10.xdc
projects/rfx_stream/prj/red_pitaya/rfx_stream_10.srcs/sources_1/bd/red_pitaya_ps_1/: red_pitaya_ps_1.bd  red_pitaya_ps_1.bd_2017.4.tcl
projects/rfx_stream/prj/red_pitaya/rfx_stream_10.srcs/sources_1/bd/red_pitaya_ps_1/hdl/: red_pitaya_ps_1_wrapper.v
projects/rfx_stream/prj/red_pitaya/rfx_stream_dcp_0.1.srcs/sources_1/bd/red_pitaya_ps_1/: red_pitaya_ps_1.bd  red_pitaya_ps_1.bd_2017.4.tcl
projects/rfx_stream/prj/red_pitaya/rfx_stream_dcp_0.1.srcs/sources_1/bd/red_pitaya_ps_1/hdl/: red_pitaya_ps_1_wrapper.v
projects/rfx_stream/src/: trarec.vhdl
