
AX_CONFIG_FILES(
 Makefile
 rfx_pwmgen/Makefile
 rfx_pwmgen/linux/src/Makefile
 rfx_pwmgen/linux/src/Kbuild
 rfx_rpadc/Makefile
 rfx_rpadc/linux/src/Makefile
 rfx_rpadc/linux/src/Kbuild
 rfx_nioadc/Makefile
 rfx_nioadc/linux/src/Makefile
 rfx_nioadc/linux/src/Kbuild
 w7x_timing/Makefile
 prova/Makefile

 rfx_recorder/Makefile
 rfx_recorder/linux/src/Makefile
 rfx_recorder/linux/src/Kbuild

 rfx_stream/Makefile
 rfx_stream/linux/src/Makefile
 rfx_stream/linux/src/Kbuild

 rfx_dac/Makefile
 rfx_dac/linux/src/Makefile
 rfx_dac/linux/src/Kbuild
)

